# JobPilot

./: .gitignore  README.md  start.bat  test_extension.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: applier.py  scout.py  tailor.py
backend/app/api/: agents.py  applications.py  auth.py  jobs.py  resumes.py  router.py
backend/app/core/: database.py  llm.py  resume_parser.py  security.py
backend/app/models/: __init__.py  agent_run.py  application.py  job_posting.py  resume.py  user.py
backend/app/schemas/: __init__.py  application.py  job.py  resume.py  user.py
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agents-view.tsx  applications-view.tsx  auth-page.tsx  dashboard.tsx  jobs-view.tsx  overview-view.tsx  resume-view.tsx
frontend/src/lib/: api.ts  auth-context.tsx
test_profile/: Local State
test_profile/Default/: History  Preferences  Secure Preferences  Web Data
test_profile/Default/Cache/Cache_Data/: data_0  data_1  index
test_profile/Default/Code Cache/js/: 637dce2da2c4bdb8_0
test_profile/Default/DawnGraphiteCache/: index
test_profile/Default/DawnWebGPUCache/: index
test_profile/Default/Extension Rules/: LOG
test_profile/Default/Extension Scripts/: LOG
test_profile/Default/Extension State/: LOG
test_profile/Default/GPUCache/: index
test_profile/Default/Local Extension Settings/ickimhkabdkjgahdkgljlghabokebici/: LOG
test_profile/Default/Local Storage/leveldb/: LOG
test_profile/Default/Network/: Network Persistent State  Reporting and NEL  TransportSecurity
test_profile/Default/Service Worker/Database/: LOG
test_profile/Default/Service Worker/ScriptCache/: 2cc80dabc69f58b6_0  2cc80dabc69f58b6_1
test_profile/Default/Session Storage/: LOG
test_profile/Default/Sessions/: Session_13422860475419809  Tabs_13422860475457419
test_profile/Default/Site Characteristics Database/: LOG
test_profile/Default/Sync Data/LevelDB/: LOG
test_profile/Default/WebStorage/: QuotaManager
test_profile/Default/shared_proto_db/: LOG
test_profile/GrShaderCache/: index
test_profile/GraphiteDawnCache/: index
test_profile/ShaderCache/: index
test_profile/segmentation_platform/: ukm_db
(+5 files in other folders)
